tests/src/frontend/typechecking/invalid/infer_frozen_cla_2.sk
class Foo<T: frozen>(T)
fun test(): void {
  _ = Foo(mutable Array[0])
}
